add ERP menu to portfolio

--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -314,8 +314,8 @@ Header
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">ECOMMERCE</li>
-            <li data-filter=".filter-card">SIG</li>
-            <li data-filter=".filter-web">STARTUP</li>
+            <li data-filter=".filter-card">ERP</li>
+            <li data-filter=".filter-web">WEB</li>
           </ul>
         </div>
       </div>
@@ -364,7 +364,7 @@ Header
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -378,7 +378,7 @@ Header
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/b.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -518,7 +518,7 @@ Header
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/c.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -532,7 +532,7 @@ Header
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/d.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -546,7 +546,7 @@ Header
           </div>
         </div>
 
-<div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+<div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/e.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -560,7 +560,7 @@ Header
           </div>
         </div>
 
-<div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+<div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/f.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -630,7 +630,7 @@ Header
           </div>
         </div>
 
-<div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.2s">
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.2s">
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a6.png"), class: "img-fluid"%>
             <div class="portfolio-info">
@@ -643,6 +643,149 @@ Header
             </div>
           </div>
         </div>
+
+        <!--                                                                     -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_01.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_01.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_02.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_02.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_03.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_03.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_04.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_04.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_05.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_05.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_06.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_06.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_07.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_07.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_08.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_08.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_09.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_09.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <%= image_tag ("img/portfolio/erp_10.png"), class: "img-fluid"%>
+            <div class="portfolio-info">
+              <h4><a href="#">ERP</a></h4>
+              <p>ERP</p>
+              <div>
+                <a href="../erp_10.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
+                <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--                                                                     -->
+
 
       </div>
 
@@ -832,7 +975,7 @@ Header
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/4.jpg"), class: "img-fluid"%>
+            <%= image_tag ("img/docker-logo.png"), class: "img-fluid"%>
           </div>
         </div>
 
@@ -878,7 +1021,7 @@ Header
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/31.png"), class: "img-fluid"%>
+            <%= image_tag ("img/logo-strapi-black-blue.png_71430fb155.png"), class: "img-fluid"%>
           </div>
         </div>
 
@@ -886,7 +1029,7 @@ Header
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/Python.svg"), class: "img-fluid"%>
+            <%= image_tag ("img/python-logo-inkscape.svg"), class: "img-fluid"%>
           </div>
         </div>
 
