add recaptcha to form contact

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
 
   <!-- Main Stylesheet File -->
   <%= stylesheet_link_tag "css/style.css" %>
+
+  <!-- Recaptcha -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
 
   <body>
