--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -179,9 +179,10 @@ Header
           <div class="box">
             <div class="icon"><i class="ion-social-nodejs" style="color: #41cf2e;"></i></div>
             <h4 class="title"><a href="">Web Application Development</a></h4>
-            <p class="description">Web application development is the creation of application programs that reside on remote servers and are delivered to the user's device over the Internet</p>
+            <p class="description">Web application development is the creation of application programs that reside on remote servers and are delivered to the user's device over the Internet.</p>
           </div>
         </div>
+
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
           <div class="box">
             <div class="icon"><i class="ion-social-android-outline" style="color: #3fcdc7;"></i></div>
@@ -197,6 +198,7 @@ Header
             <p class="description">ERP software handles the management of main business processes in real-time. ERP applications collect, store, manage and interpret information from various business activities.</p>
           </div>
         </div>
+
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
           <div class="box">
             <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
@@ -212,11 +214,12 @@ Header
             <p class="description">The customer service offer a variety of maintenance modalities to our clients and also continuous evolution of our products during the after-sales phase of the projects.</p>
           </div>
         </div>
+
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
           <div class="box">
             <div class="icon"><i class="ion-ios-cart-outline" style="color: #fc0303;"></i></div>
             <h4 class="title"><a href="">Ecommerce Development</a></h4>
-            <p class="description">Our dedicated ecommerce developers experts can ensure that your site performs,have ecommerce features, offering scalability and integration solutions</p>
+            <p class="description">Our dedicated ecommerce developers experts can ensure that your site performs,have ecommerce features, offering scalability and integration solutions.</p>
           </div>
         </div>
 
@@ -326,7 +329,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/01.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 1</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../01.png" data-lightbox="portfolio" data-title="" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
@@ -340,8 +343,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a1.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 1</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a1.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -354,7 +357,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/02.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 2</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../02.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -368,8 +371,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 1</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -382,8 +385,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/b.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 2</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../b.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -396,7 +399,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/03.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 3</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../03.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -410,7 +413,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/04.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 4</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../04.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -424,7 +427,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/05.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 5</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../05.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -438,7 +441,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/06.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 6</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../06.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -452,7 +455,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/07.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 7</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../07.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -466,7 +469,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/08.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 8</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../08.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -480,7 +483,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/09.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 9</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../09.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -494,7 +497,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/010.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 10</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../010.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -508,7 +511,7 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/011.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">Ecommerce 11</a></h4>
+              <h4><a href="#">Ecommerce</a></h4>
               <p>Ecommerce</p>
               <div>
                 <a href="../011.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
@@ -522,8 +525,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/c.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 3</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../c.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -536,8 +539,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/d.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 4</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../d.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -550,8 +553,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/e.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 5</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../e.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -564,8 +567,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/f.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">SIG 6</a></h4>
-              <p>SIG</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../f.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -578,8 +581,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a2.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 2</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a2.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -592,8 +595,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a3.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 3</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a3.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -606,8 +609,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a4.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 4</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a4.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -620,8 +623,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a5.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 5</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a5.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -634,8 +637,8 @@ Header
           <div class="portfolio-wrap">
             <%= image_tag ("img/portfolio/a6.png"), class: "img-fluid"%>
             <div class="portfolio-info">
-              <h4><a href="#">STARTUP 6</a></h4>
-              <p>STARTUP</p>
+              <h4><a href="#">WEB</a></h4>
+              <p>WEB</p>
               <div>
                 <a href="../a6.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
@@ -961,21 +964,19 @@ Header
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/Ruby_on_Rails.svg"), class: "img-fluid"%>
-          </div>
-        </div>
-
-        
-
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/wordpress-logo-vector-01.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Rails.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/docker-logo.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Wordpress.png"), class: "img-fluid"%>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="client-logo">
+            <%= image_tag ("img/Docker.png"), class: "img-fluid"%>
           </div>
         </div>
 
@@ -1009,27 +1010,21 @@ Header
           </div>
         </div>
 
-       
-
-        
-
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/10.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Javascript.png"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/logo-strapi-black-blue.png_71430fb155.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Strapi.png"), class: "img-fluid"%>
           </div>
         </div>
 
-        
-
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/python-logo-inkscape.svg"), class: "img-fluid"%>
+            <%= image_tag ("img/Python.svg"), class: "img-fluid"%>
           </div>
         </div>
 
@@ -1095,9 +1090,13 @@ Header
                 <input type="text" class="form-control" name="subject" id="message" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                 <div class="validation"></div>
               </div>
+              
               <div class="form-group">
                 <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                 <div class="validation"></div>
+              </div>
+              <div class="form-group">
+                <div class="g-recaptcha" data-sitekey="6Lcp_jMcAAAAAI6Or4j6PjHmlLrD5yIvJJlCZfzW"></div>
               </div>
               <div class="text-center"><button id="sendMessageButton" type="submit" title="Send Message">Send Message</button></div>
             </form>
