--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
       <%= javascript_include_tag('lib/jquery/jquery.min.js') %>
       <%= javascript_include_tag('lib/jquery/jquery-migrate.min.js') %>
       <%= javascript_include_tag('lib/bootstrap/js/bootstrap.bundle.min.js') %>
+      <%= javascript_include_tag('lib/bootstrap/js/bootstrap.min.js') %>
       <%= javascript_include_tag('lib/easing/easing.min.js') %>
       <%= javascript_include_tag('lib/mobile-nav/mobile-nav.js') %>
       <%= javascript_include_tag('lib/wow/wow.min.js') %>
@@ -43,6 +44,8 @@
       <%= javascript_include_tag('lib/owlcarousel/owl.carousel.min.js') %>
       <%= javascript_include_tag('lib/isotope/isotope.pkgd.min.js') %>
       <%= javascript_include_tag('lib/lightbox/js/lightbox.min.js') %>
+      <%= javascript_include_tag('lib/wow/wow.min.js') %>
+      
       <!-- Contact Form JavaScript File -->
       <%= javascript_include_tag('contactform/contactform.js') %>
 
