--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -21,9 +21,9 @@ Header
   <div class="container">
 
     <div class="logo float-left">
-      <!-- Uncomment below if you prefer to use an image logo 
-      <h1 class="text-light"><a href="#header"><span>Elite Softwear</span></a></h1> -->
-      <a href="#intro" class="scrollto"><%= image_tag ("img/logo1.png"), class: "img-fluid"%></a>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <h1 class="text-light"><a href="#header"><span>Next Challenge</span></a></h1> 
+      <%# <a href="#intro" class="scrollto">= image_tag ("img/logo1.png"), class: "img-fluid"</a> %>
     </div>
 
     <nav class="main-nav float-right d-none d-lg-block">
@@ -50,10 +50,10 @@ Header
             <li><a href="#">Drop Down 5</a></li>
           </ul>
         </li>  -->
-        <li><a href="#contact">Contact Us &emsp; |</a></li>
+        <li><a href="#contact">Contact Us &emsp; </a></li>
         
-        <li><a href="<%= francais_path %>">FR</a></li>
-        <li><a href="#contact">ENG</a></li>
+        
+        
       </ul>
     </nav><!-- .main-nav -->
 
