--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NewBiz Bootstrap Template</title>
+  <title>Next Challenge</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-
-  
-  
  
 </head>
 
@@ -98,7 +95,7 @@ Header
 
         <div class="col-lg-6 content order-lg-1 order-2">
           <p>
-          Elite Soft is a company for freelance full stack web development and IT administration.
+          Next Challenge is a company that do full stack web development and IT administration.
           </p>
 
           <div class="icon-box wow fadeInUp">
@@ -1114,13 +1111,13 @@ Header
   Footer
 ============================-->
 <footer id="footer">
-    <!--<div class="footer-top">
+  <div class="footer-top">
     <div class="container">
       <div class="row">
 
          <div class="col-lg-4 col-md-6 footer-info">
-          <h3>Bouafia Khaled</h3>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+          <h3>Eurl Next Challenge</h3>
+          <p></p>
         </div>
 
         <div class="col-lg-2 col-md-6 footer-links">
@@ -1129,8 +1126,8 @@ Header
             <li><a href="#">Home</a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <%# <li><a href="#">Terms of service</a></li>
+            <li><a href="#">Privacy policy</a></li> %>
           </ul>
         </div>
 
@@ -1140,8 +1137,9 @@ Header
             CITE HACHEMI NOUV 221 <br>
             LOTS N° 217 A.P.C DE SETIF<br>
             ALGERIA <br>
-            <strong>Phone:</strong> +213 662 24 44 35<br>
-            <strong>Email:</strong> khaledsetif1900@gmail.com<br>
+            <strong>Phone:</strong> +213 552 56 96 54<br>
+            <strong>Email:</strong> contact@nextchallenge-dz.com<br>
+            <strong>Activity:</strong> Bureau d'étude et de conseil en informatique (consulting)<br>
           </p>
 
           <div class="social-links">
@@ -1154,21 +1152,21 @@ Header
 
         </div>
 
-        <div class="col-lg-3 col-md-6 footer-newsletter">
+        <%# <div class="col-lg-3 col-md-6 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
           <form action="" method="post">
             <input type="email" name="email"><input type="submit"  value="Subscribe">
           </form>
-        </div>
+        </div> %>
 
       </div>
     </div>
-  </div>  -->
+  </div>  
 
   <div class="container">
     <div class="copyright">
-      &copy; Copyright <strong>Next Challenge</strong>. All Rights Reserved
+      &copy; Copyright <strong>Eurl Next Challenge</strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!--
@@ -1177,7 +1175,7 @@ Header
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=NewBiz
       -->
-      Designed by <a href="https://bootstrapmade.com/">Bouafia Khaled</a>
+      Designed by <a href="https://bootstrapmade.com/">Khaled Bouafia</a>
     </div>
   </div>
 </footer><!-- #footer -->
