--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,22 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+
+  <!-- Make sure you put this AFTER Leaflet's CSS -->
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+
+  <script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/Leaflet.fullscreen.min.js'></script>
+  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css' rel='stylesheet' />
  
+  <style>
+    #map { width: 100%; height: 420px; }
+  </style>
 </head>
 
 <body>
@@ -1050,7 +1065,8 @@ Header
 
         <div class="col-lg-6">
           <div class="map mb-4 mb-lg-0" >
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7679.491781824357!2d5.438146650808376!3d36.20668047768116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbg!4v1592563618870!5m2!1sen!2sbg" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
+           <div id="map"></div>
+              <%# <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7679.491781824357!2d5.438146650808376!3d36.20668047768116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbg!4v1592563618870!5m2!1sen!2sbg" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe> %>
           </div>
         </div>
         <div class="col-lg-6">
@@ -1189,4 +1205,31 @@ Header
 
 
 </body>
+
+<script>
+   var map = L.map('map',{
+      
+        center: [36.19112, 5.41373],
+        zoom: 12,
+        fullscreenControl: true,
+        
+       // drawControl: true
+
+    });
+
+    L.tileLayer('http://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+       attribution: 'Map data &copy; OpenStreetMap contributors',
+       maxZoom: 16,
+    }).addTo(map);
+
+    var marker = L.marker([36.20668047768116, 5.438146650808376]).addTo(map);
+
+    marker.bindPopup("<b>EURL Next Challenge</b>").openPopup();
+
+    // var popup = L.popup()
+    // .setLatLng([36.19112, 5.41373])
+    // .setContent("I am a standalone popup.")
+    // .openOn(map);
+</script>
+
 </html>
