--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1087,32 +1087,42 @@ Header
 
           <div class="form">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
-            <form action="https://formspree.io/f/xknqewla" method="post" role="form" class="contactForm">
+            <div id="errormessage">Sorry there is a problem</div>
+            <%# <form action="https://formspree.io/f/xknqewla" method="post" role="form" class="contactForm"> %>
+            <%= form_for Contact.new, html: { class: "contactForm" } do |f| %>
               <div class="form-row">
                 <div class="form-group col-lg-6">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <%# <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" /> %>
+                  <%= f.text_field :name, placeholder: "Your Name", class: "form-control" %>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group col-lg-6">
-                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <%# <input type="email" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" /> %>
+                  <%= f.text_field :email, placeholder: "Your Email", class: "form-control" %>
                   <div class="validation"></div>
                 </div>
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" name="subject" id="message" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <%#= f.text_field :subject, placeholder: "Subject", class: "form-control" %>
                 <div class="validation"></div>
               </div>
               
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <%# <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea> %>
+                <%= f.text_area :message, placeholder: "Message" ,class: 'form-control', rows: "5" %>
                 <div class="validation"></div>
               </div>
               <div class="form-group">
-                <%= recaptcha_tags %>
+                <%#= recaptcha_tags %>
+                 <%= f.hidden_field :nickname, class: 'form-control'%>
               </div>
-              <div class="text-center"><button id="sendMessageButton" type="submit" title="Send Message">Send Message</button></div>
-            </form>
+              <%# <div class="text-center"><button id="sendMessageButton" type="submit" title="Send Message">Send Message</button></div> %>
+              <div class="text-center">
+                <%= f.submit "Send Message", class: "btn btn-primary" %>
+              </div>
+            <%# </form> %>
+            <% end %>
           </div>
         </div>
 
@@ -1142,6 +1152,7 @@ Header
             <li><a href="#">Home</a></li>
             <li><a href="#about">About us</a></li>
             <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <%# <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li> %>
           </ul>
