--- a/app/assets/stylesheets/css/style_rtl.css
+++ b/app/assets/stylesheets/css/style_rtl.css
@@ -50,7 +50,7 @@ h6 {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #007bff;
+  background: #00366f;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -180,12 +180,12 @@ h6 {
 
 #intro .intro-img {
   width: 50%;
-  float: right;
+  float: left;
 }
 
 #intro .intro-info {
   width: 50%;
-  float: left;
+  float: right;
 }
 
 #intro .intro-info h2 {
@@ -257,7 +257,7 @@ h6 {
 .main-nav > ul > li {
   position: relative;
   white-space: nowrap;
-  float: left;
+  float: right;
 }
 
 .main-nav a {
@@ -484,6 +484,7 @@ h6 {
 #about {
   background: #fff;
   padding: 60px 0;
+  direction: rtl;
 }
 
 #about .about-container .background {
@@ -515,7 +516,7 @@ h6 {
 }
 
 #about .about-container .icon-box .icon {
-  float: left;
+  float: right;
   background: #fff;
   width: 64px;
   height: 64px;
@@ -556,7 +557,7 @@ h6 {
 }
 
 #about .about-container .icon-box .title {
-  margin-left: 80px;
+  margin-right: 80px;
   font-weight: 600;
   margin-bottom: 5px;
   font-size: 18px;
@@ -567,7 +568,7 @@ h6 {
 }
 
 #about .about-container .icon-box .description {
-  margin-left: 80px;
+  margin-right: 80px;
   line-height: 24px;
   font-size: 14px;
 }
@@ -607,7 +608,7 @@ h6 {
 
 #services .icon {
   position: absolute;
-  left: -10px;
+  right: -10px;
   top: calc(50% - 32px);
 }
 
@@ -618,7 +619,7 @@ h6 {
 }
 
 #services .title {
-  margin-left: 40px;
+  margin-right: 40px;
   font-weight: 700;
   margin-bottom: 15px;
   font-size: 18px;
@@ -634,14 +635,14 @@ h6 {
 
 #services .description {
   font-size: 14px;
-  margin-left: 40px;
+  margin-right: 40px;
   line-height: 24px;
   margin-bottom: 0;
 }
 
 #why-us {
   padding: 60px 0;
-  background: #004a99;
+  background: #00366f;
 }
 
 #why-us .section-header h3,
@@ -736,7 +737,7 @@ h6 {
   padding: 6px 20px;
   font-size: 12px;
   line-height: 20px;
-  color: #007bff;
+  color: #00366f;
   border-radius: 50px;
   text-transform: uppercase;
   background: #ecf5ff;
@@ -746,7 +747,7 @@ h6 {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #007bff;
+  background: #00366f;
   color: #fff;
 }
 
@@ -878,7 +879,7 @@ h6 {
   width: 120px;
   border-radius: 50%;
   border: 4px solid #fff;
-  float: left;
+  float: right;
 }
 
 #testimonials .testimonial-item h3 {
@@ -886,19 +887,19 @@ h6 {
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #111;
-  margin-left: 140px;
+  margin-right: 140px;
 }
 
 #testimonials .testimonial-item h4 {
   font-size: 14px;
   color: #999;
   margin: 0 0 15px 0;
-  margin-left: 140px;
+  margin-right: 140px;
 }
 
 #testimonials .testimonial-item p {
   font-style: italic;
-  margin: 0 0 15px 140px;
+  margin: 0 0 15px 85px;
 }
 
 #testimonials .owl-nav,
@@ -917,7 +918,7 @@ h6 {
 }
 
 #testimonials .owl-dot.active {
-  background-color: #007bff;
+  background-color: #00366f;
 }
 
 /* Team Section
@@ -1115,18 +1116,18 @@ h6 {
 #contact .info i {
   font-size: 32px;
   color: #007bff;
-  float: left;
+  float: right;
   line-height: 1;
 }
 
 #contact .info p {
-  padding: 0 0 10px 36px;
+  padding: 0 36px 10px 0px;
   line-height: 28px;
   font-size: 14px;
 }
 
 #contact .form #sendmessage {
-  color: #007bff;
+  color: #00366f;
   border: 1px solid #007bff;
   display: none;
   text-align: center;
@@ -1164,6 +1165,7 @@ h6 {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
+  direction: rtl;
 }
 
 #contact .form button[type="submit"] {
@@ -1189,6 +1191,7 @@ h6 {
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
+  direction: rtl;
 }
 
 #footer .footer-top {
