--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+  <html>
   <head>
-    <title>Elite Soft</title>
+    <title>Next Challenge</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,9 +11,9 @@
     
     <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet" type="text/css">
-
+  
   <!-- Bootstrap CSS File -->
-  <%= stylesheet_link_tag "lib/bootstrap/css/bootstrap.min.css" %>
+  <%#= stylesheet_link_tag "lib/bootstrap/css/bootstrap.min.css" %>
   <!-- Libraries CSS Files -->
   <%= stylesheet_link_tag "lib/font-awesome/css/font-awesome.min.css" %>
   <%= stylesheet_link_tag "lib/animate/animate.min.css" %>
@@ -22,7 +22,14 @@
   <%= stylesheet_link_tag "lib/lightbox/css/lightbox.min.css" %>
 
   <!-- Main Stylesheet File -->
-  <%= stylesheet_link_tag "css/style.css" %>
+  <% if I18n.locale.to_s == "ar" %>
+    <%= stylesheet_link_tag    "css/style_rtl.css" %>
+    <%= stylesheet_link_tag "lib/bootstrap/css/bootstrap_rtl.css" %>
+  <% else %>
+    <%= stylesheet_link_tag    "css/style.css" %>
+    <%= stylesheet_link_tag "lib/bootstrap/css/bootstrap.min.css" %>
+  <% end %>
+  <%#= stylesheet_link_tag "css/style.css" %>
 
   </head>
 
@@ -43,6 +50,7 @@
       <%= javascript_include_tag('lib/isotope/isotope.pkgd.min.js') %>
       <%= javascript_include_tag('lib/lightbox/js/lightbox.min.js') %>
       <%= javascript_include_tag('lib/wow/wow.min.js') %>
+      
       
       <!-- Contact Form JavaScript File -->
       <%= javascript_include_tag('contactform/contactform.js') %>
