--- a/app/assets/stylesheets/css/style.css
+++ b/app/assets/stylesheets/css/style.css
@@ -484,6 +484,7 @@ h6 {
 #about {
   background: #fff;
   padding: 60px 0;
+  direction: ltr;
 }
 
 #about .about-container .background {
@@ -1165,6 +1166,7 @@ h6 {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
+  direction: ltr;
 }
 
 #contact .form button[type="submit"] {
@@ -1190,6 +1192,7 @@ h6 {
   padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
+  direction: ltr;
 }
 
 #footer .footer-top {
