--- a/app/assets/stylesheets/css/style_rtl.css
+++ b/app/assets/stylesheets/css/style_rtl.css
@@ -176,6 +176,7 @@ h6 {
   background: url("../img/intro-bg.png") center bottom no-repeat;
   background-size: cover;
   padding: 200px 0 120px 0;
+  direction: rtl;
 }
 
 #intro .intro-img {
