--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1080,41 +1080,41 @@ Header
           <div class="form">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage">Sorry there is a problem</div>
-            <%# <form action="https://formspree.io/f/xknqewla" method="post" role="form" class="contactForm"> %>
-            <%= form_for @contact, html: { class: "contactForm" } do |f| %>
+            <form action="https://formspree.io/f/mvoddrqe" method="post" role="form" class="contactForm">
+            <%#= form_for @contact, html: { class: "contactForm" } do |f| %>
               <div class="form-row">
                 <div class="form-group col-lg-6">
-                  <%# <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" /> %>
-                  <%= f.text_field :name, placeholder: "#{t('section_contact.form.name')}", class: "form-control" %>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <%#= f.text_field :name, placeholder: "#{t('section_contact.form.name')}", class: "form-control" %>
                   <div class="validation"></div>
                 </div>
                 <div class="form-group col-lg-6">
-                  <%# <input type="email" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" /> %>
-                  <%= f.text_field :email, placeholder: "#{t('section_contact.form.email')}", class: "form-control" %>
+                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <%#= f.text_field :email, placeholder: "#{t('section_contact.form.email')}", class: "form-control" %>
                   <div class="validation"></div>
                 </div>
               </div>
               <div class="form-group">
-                <%# <input type="text" class="form-control" name="subject" id="message" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" /> %>
-                <%= f.text_field :subject, placeholder: "#{t('section_contact.form.subject')}", class: "form-control" %>
+                <input type="text" class="form-control" name="subject" id="message" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <%#= f.text_field :subject, placeholder: "#{t('section_contact.form.subject')}", class: "form-control" %>
                 <div class="validation"></div>
               </div>
               
               <div class="form-group">
-                <%# <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea> %>
-                <%= f.text_area :message, placeholder: "#{t('section_contact.form.message')}" ,class: 'form-control', rows: "5" %>
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <%#= f.text_area :message, placeholder: "#{t('section_contact.form.message')}" ,class: 'form-control', rows: "5" %>
                 <div class="validation"></div>
               </div>
               <div class="form-group">
                 <%#= recaptcha_tags %>
-                 <%= f.hidden_field :nickname, class: 'form-control'%>
+                 <%#= f.hidden_field :nickname, class: 'form-control' %>
               </div>
-              <%# <div class="text-center"><button id="sendMessageButton" type="submit" title="Send Message">Send Message</button></div> %>
+              <div class="text-center"><button id="sendMessageButton" type="submit" title="Send Message">Send Message</button></div>
               <div class="text-center">
-                <%= f.submit "#{t('section_contact.form.button')}", class: "btn btn-primary" %>
+                <%#= f.submit "#{t('section_contact.form.button')}", class: "btn btn-primary" %>
               </div>
-            <%# </form> %>
-            <% end %>
+            </form>
+            <%# end %>
           </div>
         </div>
 
