--- a/app/assets/stylesheets/css/style_rtl.css
+++ b/app/assets/stylesheets/css/style_rtl.css
@@ -1171,7 +1171,7 @@ h6 {
 }
 
 #contact .form button[type="submit"] {
-  background: #007bff;
+  background: #00366f;
   border: 0;
   border-radius: 20px;
   padding: 8px 30px;
@@ -1197,7 +1197,7 @@ h6 {
 }
 
 #footer .footer-top {
-  background: #004a99;
+  background: #00366f;
   padding: 60px 0 30px 0;
 }
 
